# coEnergyMarket_dataCurated_GL

./: .gitignore  CHANGELOG.md  README.md  azure-pipelines.yml  nx.json  package.json  query.sql  requirements.txt  setup.cfg  setup.py
extra/config/: constants.py  hudiconfig.py  sparkconfig.py  transform.py
extra/utils/: utils.py
tables_energy/co_energy_market_curado_customers/: co_energy_market_curado_customers.py  project.json
tables_energy/co_energy_market_curado_providers/: co_energy_market_curado_providers.py  project.json
tables_energy/co_energy_market_curado_transactions/: co_energy_market_curado_transactions.py  project.json
tables_energy_raw/co_energy_market_raw_upload/: co_energy_market_raw_upload.py  project.json
tests/: test_co_energy_market_curado_providers.py
