[metadata]

name = tables_energy
version = 0.0.1
author = Catalina Garcia
#url = https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml
description = Proyecto Table Energy Market
long_description = file: README.md
long_description_content_type = text/markdown
keywords = data_engieering
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir =
    tables_energy = tables_energy
    extra = extra

py_module = tables_energy
python_requires = >=3.10

[tool:pytest]
python_classes = Test Describe
python_files = test_*.py
python_functions = test_ it_ they_ but_ and_it_
testpaths =
    tests

py_module = tables_energy
python_requires = >=3.8
